# DML_Project_Team_4

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: kidney_processed.csv
notebooks/: 01_eda.ipynb
src/: pipeline.py
src/models/: train.py
src/monitoring/: __init__.py  drift_detection.py
tests/: conftest.py
